--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -2562,8 +2562,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "id": "75173cda-2b70-4b78-8495-3e45ea9e9828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nbars ': {'plot0': {'Q': 'How many bars are there on the figure? You are a helpful assistant, please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "   'A': {'nbars ': 50}}}}"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datas['VQA']['Level 1']['Plot-level questions']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "036df21d",
    "metadata": {},
    "outputs": [],
    "source": []
