--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -2583,9 +2583,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0f7ccac",
+   "metadata": {},
+   "source": [
+    "Practice reading in:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "036df21d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "data_file = json_dir + 'nclust_4_trial8.json'\n",
+    "with open(data_file,'r') as f:\n",
+    "    t = json.load(f)\n",
+    "    datas = json.loads(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "ea12312c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Level 1': {'Figure-level questions': {},\n",
+       "  'Plot-level questions': {'nbars ': {'plot0': {'Q': 'How many bars are there on the figure? You are a helpful assistant, please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "     'A': {'nbars ': 50}}}}},\n",
+       " 'Level 2': {'Plot-level questions': {'minimum (plot numbers)': {'plot0': {'Q': 'What are the minimum data values in this figure? You are a helpful assistant, please format the output as a json as {\"minimum x\":\"\"} where the minimum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'minimum (plot numbers)': {'minimum x': 0.37513605039268844}}}},\n",
+       "   'minimum (words)': {'plot0': {'Q': 'What are the minimum data values in this figure? You are a helpful assistant, please format the output as a json as {\"minimum x\":\"\"} where the minimum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'minimum (words)': {'minimum x': 0.37513605039268844}}}},\n",
+       "   'maximum (plot numbers)': {'plot0': {'Q': 'What are the maximum data values in this figure? You are a helpful assistant, please format the output as a json as {\"maximum x\":\"\"} where the maximum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'maximum (plot numbers)': {'maximum x': 0.5230372521302568}}}},\n",
+       "   'maximum (words)': {'plot0': {'Q': 'What are the maximum data values in this figure? You are a helpful assistant, please format the output as a json as {\"maximum x\":\"\"} where the maximum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'maximum (words)': {'maximum x': 0.5230372521302568}}}},\n",
+       "   'median (plot numbers)': {'plot0': {'Q': 'What are the median data values in this figure? You are a helpful assistant, please format the output as a json as {\"median x\":\"\"} where the median value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'median (plot numbers)': {'median x': 0.43159559265881575}}}},\n",
+       "   'median (words)': {'plot0': {'Q': 'What are the median data values in this figure? You are a helpful assistant, please format the output as a json as {\"median x\":\"\"} where the median value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'median (words)': {'median x': 0.43159559265881575}}}},\n",
+       "   'mean (plot numbers)': {'plot0': {'Q': 'What are the mean data values in this figure? You are a helpful assistant, please format the output as a json as {\"mean x\":\"\"} where the mean value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'mean (plot numbers)': {'mean x': 0.43715784737441477}}}},\n",
+       "   'mean (words)': {'plot0': {'Q': 'What are the mean data values in this figure? You are a helpful assistant, please format the output as a json as {\"mean x\":\"\"} where the mean value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       "     'A': {'mean (words)': {'mean x': 0.43715784737441477}}}}}},\n",
+       " 'Level 3': {'Plot-level questions': {'gmm ngaussians (plot numbers)': {'plot0': {'Q': 'How many gaussians have been used to generate the histogram in this figure? You are a helpful assistant, please format the output as a json as {\"gmm ngaussians\":\"\"}}. Where the \"ngaussians\" parameter should be the number of gaussians used to generate the histogram and should be an integer. ',\n",
+       "     'A': {'gmm ngaussians (plot numbers)': 4}}}}}}"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datas['VQA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "a25a5dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nbars ': {'plot0': {'Q': 'How many bars are there on the figure? You are a helpful assistant, please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "   'A': {'nbars ': 50}}}}"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datas['VQA']['Level 1']['Plot-level questions']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "036df21d",
+   "id": "342dd112",
    "metadata": {},
    "outputs": [],
    "source": []
