--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -35,12 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/'"
+    "#dir_api = '/Users/jnaiman/Dropbox/Paper_JCDL2025/chatgpt_api/' # where to store API results\n",
+    "\n",
+    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists"
    ]
   },
   {
@@ -155,6 +157,30 @@
     "client = OpenAI(\n",
     "  api_key=api_key.strip(),  # this is also the default, it can be omitted\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eb0608b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96dcbf5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc14afa3",
+   "metadata": {},
+   "source": [
+    "# ------- HERE -----"
    ]
   },
   {
@@ -3594,31 +3620,32 @@
     "                # Prepare the API request\n",
     "                prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
     "                \n",
-    "                # Send the request to the GPT-4o API\n",
-    "                response = client.chat.completions.create(\n",
-    "                    #model=\"gpt-4\",\n",
-    "                    #model=\"gpt-4o\",\n",
-    "                    model =\"gpt-4o-mini\",\n",
-    "                    #model =\"gpt-3.5-turbo\",\n",
-    "                    #model=\"gpt-3.5-turbo-instruct\",\n",
-    "                    messages=[\n",
-    "                        {\"role\": \"system\", \"content\": \"You are a helpful assistant that can analyze images.\"},\n",
-    "                        {\"role\":\"user\", \"content\": [\n",
-    "                            {\n",
-    "                              \"type\": \"text\",\n",
-    "                              \"text\": prompt\n",
-    "                            },\n",
-    "                            {\n",
-    "                              \"type\": \"image_url\",\n",
-    "                              \"image_url\": {\n",
-    "                                \"url\": f\"data:image/jpeg;base64,{encoded_image}\"\n",
-    "                              }\n",
+    "                if not test_run:\n",
+    "                    # Send the request to the GPT-4o API\n",
+    "                    response = client.chat.completions.create(\n",
+    "                        #model=\"gpt-4\",\n",
+    "                        #model=\"gpt-4o\",\n",
+    "                        model =\"gpt-4o-mini\",\n",
+    "                        #model =\"gpt-3.5-turbo\",\n",
+    "                        #model=\"gpt-3.5-turbo-instruct\",\n",
+    "                        messages=[\n",
+    "                            {\"role\": \"system\", \"content\": \"You are a helpful assistant that can analyze images.\"},\n",
+    "                            {\"role\":\"user\", \"content\": [\n",
+    "                                {\n",
+    "                                \"type\": \"text\",\n",
+    "                                \"text\": prompt\n",
+    "                                },\n",
+    "                                {\n",
+    "                                \"type\": \"image_url\",\n",
+    "                                \"image_url\": {\n",
+    "                                    \"url\": f\"data:image/jpeg;base64,{encoded_image}\"\n",
+    "                                }\n",
+    "                                }\n",
+    "                            ]\n",
     "                            }\n",
     "                        ]\n",
-    "                        }\n",
-    "                    ]\n",
-    "                )\n",
-    "                success = True\n",
+    "                    )\n",
+    "                    success = True\n",
     "            except Exception as e:\n",
     "                print(e)\n",
     "                new_fac = fac/iFac\n",
@@ -3626,26 +3653,22 @@
     "                encoded_image = load_image(image_path,fac=new_fac)\n",
     "                iFac += 1\n",
     "        \n",
-    "        # Get the response from the API\n",
-    "        answer = response.choices[0].message.content\n",
-    "        # format answer\n",
-    "        answer_format = answer.replace(\"```json\\n\",'').replace(\"\\n```\",'')\n",
-    "        try:\n",
-    "            question_list['Response'] = json.loads(answer_format)\n",
-    "        except:\n",
-    "            question_list['Response'] = answer_format\n",
-    "            question_list['Error'] = 'JSON formatting'\n",
-    "        question_list['Response String'] = answer_format\n",
-    "        success = True\n",
-    "        #print('yes')\n",
-    "        #print('cant do this model')\n",
-    "        #print(e)\n",
-    "        #iFile += 1\n",
-    "        # new_fac = fac/iFac\n",
-    "        # print('new fac = ', new_fac)\n",
-    "        # encoded_image = load_image(image_path,fac=new_fac)\n",
-    "        # iFac += 1\n",
-    "            #continue\n",
+    "        if not test_run:\n",
+    "            # Get the response from the API\n",
+    "            answer = response.choices[0].message.content\n",
+    "            # format answer\n",
+    "            answer_format = answer.replace(\"```json\\n\",'').replace(\"\\n```\",'')\n",
+    "            try:\n",
+    "                question_list['Response'] = json.loads(answer_format)\n",
+    "            except:\n",
+    "                question_list['Response'] = answer_format\n",
+    "                question_list['Error'] = 'JSON formatting'\n",
+    "            question_list['Response String'] = answer_format\n",
+    "            success = True\n",
+    "        else:\n",
+    "            question_list['Response'] = 'TEST RUN'\n",
+    "            question_list['Response String'] = 'TEST RUN'\n",
+    "\n",
     "\n",
     "    # try to fix\n",
     "    for level in qa:\n",
@@ -3684,8 +3707,9 @@
     "            #if 'Error' in level:\n",
     "            #    import sys; sys.exit()\n",
     "\n",
-    "    with open(dir_api + 'Picture'+str(int(iFile)) + '.pickle', 'wb') as ff:\n",
-    "        pickle.dump([qa], ff)\n",
+    "    if not test_run:\n",
+    "        with open(dir_api + 'Picture'+str(int(iFile)) + '.pickle', 'wb') as ff:\n",
+    "            pickle.dump([qa], ff)\n",
     "\n",
     "    iFile += 1"
    ]
