start port of questions

--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 120,
    "id": "a384e543",
    "metadata": {},
    "outputs": [],
@@ -11,9 +11,9 @@
     "fullproc_r = './resources/' # for words/names\n",
     "\n",
     "# where to save the figures that are created\n",
-    "fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
+    "#fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
     "# stop overwriting what is there\n",
-    "#fake_figs_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/'\n",
+    "fake_figs_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/'\n",
     "\n",
     "# format for saving images?\n",
     "img_format = ['pdf','jpeg']\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 121,
    "id": "82acb676",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 122,
    "id": "4d785d10",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 123,
    "id": "b066179c",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 124,
    "id": "52bbd3e2",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 125,
    "id": "9f0dc2a5",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "id": "c1be6ee7",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 127,
    "id": "5a9fe905",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 128,
    "id": "2d767f07",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 129,
    "id": "fb8bfe5e-0ea1-4ea4-bc3d-b54cc1efa174",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 130,
    "id": "8b36fa32-a85d-4dbe-a4f5-bf0be3685094",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 131,
    "id": "a1cd495c-be76-4d40-bc74-86e5efecf417",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "    'resolution': {'min': 0.5, 'max': 1.0}}}}}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 132,
    "id": "2751985c",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 133,
    "id": "27aa8e6c",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 134,
    "id": "3d28ba6e",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 135,
    "id": "4a4a2738",
    "metadata": {},
    "outputs": [],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 136,
    "id": "5880bc59",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 137,
    "id": "4910eae0",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "np.str_('histogram')"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 138,
    "id": "f70f1ae0",
    "metadata": {},
    "outputs": [],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 139,
    "id": "1e68796f",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "  'noise': {'min': 0.05, 'max': 0.1}}}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 140,
    "id": "3502e136",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
        "  'noise level': 0.0637335882160598}}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "id": "f060f6f1",
    "metadata": {},
    "outputs": [],
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "id": "3ea32095",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 143,
    "id": "5954119c",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "  'noise level': 0.0637335882160598}}"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "6de0aa77",
    "metadata": {},
    "outputs": [],
@@ -912,15 +912,12 @@
     "import utils.histogram_plot_qa_utils\n",
     "reload(utils.histogram_plot_qa_utils)\n",
     "\n",
-    "from utils.histogram_plot_qa_utils import q_nbars_hist_plot_plotnums, q_colors_hist_plot_plotnums, \\\n",
-    "  q_colorlines_hist_plot_plotnums, q_linethickness_hists, q_barpoints_bars, q_stats_hists, \\\n",
-    "  q_errorbars_existance_lines, q_errorbars_size_histogram, q_distribution_hists, \\\n",
-    "  q_linear_equation_hists, q_gmm_equation_hists, q_gmm_ngaussians_hists"
+    "from utils.histogram_plot_qa_utils import q_nbars_hist_plot_plotnums, q_stats_hists, q_gmm_ngaussians_hists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 145,
    "id": "d564a7c7",
    "metadata": {},
    "outputs": [],
@@ -930,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 146,
    "id": "7f45eaab",
    "metadata": {},
    "outputs": [
@@ -940,7 +937,7 @@
        "np.float64(0.0)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 147,
    "id": "a62e85e1",
    "metadata": {},
    "outputs": [],
@@ -1227,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 148,
    "id": "6fbb87b6",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 149,
    "id": "b21dbf12",
    "metadata": {},
    "outputs": [
@@ -2520,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "id": "c4c42070",
    "metadata": {},
    "outputs": [
@@ -2550,7 +2547,7 @@
        "     'A': {'ngaussians (words)': 5}}}}}}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2561,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "id": "75173cda-2b70-4b78-8495-3e45ea9e9828",
    "metadata": {},
    "outputs": [
@@ -2572,7 +2569,7 @@
        "   'A': {'nbars ': 50}}}}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2591,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 152,
    "id": "036df21d",
    "metadata": {},
    "outputs": [],
