--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "9fc26f67-1869-44f7-97bb-238b2c5a42b1",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "fe835962-2db1-4c56-bdf4-50708fedaad7",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "9f95b5e3",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -312,44 +312,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "id": "96dcbf5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Q': 'How many bars are there on the figure? You are a helpful assistant, please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       "[{'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
        "  'A': 50,\n",
        "  'Level': 'Level 1',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
        "  'plot number': 'plot0'},\n",
-       " {'Q': 'What are the maximum data values in this figure? You are a helpful assistant, please format the output as a json as {\"maximum x\":\"\"} where the maximum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       " {'Q': 'You are a helpful assistant that can analyze images.  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.49755257997301794,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
        "  'plot number': 'plot0'},\n",
-       " {'Q': 'What are the mean data values in this figure? You are a helpful assistant, please format the output as a json as {\"mean x\":\"\"} where the mean value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       " {'Q': 'You are a helpful assistant that can analyze images.  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.34264837991488106,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
        "  'plot number': 'plot0'},\n",
-       " {'Q': 'What are the median data values in this figure? You are a helpful assistant, please format the output as a json as {\"median x\":\"\"} where the median value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       " {'Q': 'You are a helpful assistant that can analyze images.  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.3895267656798662,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
        "  'plot number': 'plot0'},\n",
-       " {'Q': 'What are the minimum data values in this figure? You are a helpful assistant, please format the output as a json as {\"minimum x\":\"\"} where the minimum value of \"x\" is calculated from  the data values used to create the plot in the format of floats.  ',\n",
+       " {'Q': 'You are a helpful assistant that can analyze images.  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.15863689997095148,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
        "  'plot number': 'plot0'},\n",
-       " {'Q': 'How many gaussians have been used to generate the histogram in this figure? You are a helpful assistant, please format the output as a json as {\"ngaussians\":\"\"}}. Where the \"ngaussians\" parameter should be the number of gaussians used to generate the histogram and should be an integer. ',\n",
+       " {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
        "  'A': 3,\n",
        "  'Level': 'Level 3',\n",
        "  'type': 'Plot-level questions',\n",
@@ -357,7 +357,7 @@
        "  'plot number': 'plot0'}]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
